<resources>
    <string name="app_name">S_WELD</string>
    <string name="title_activity_act_main">S-Weld</string>
    <string name="title_activity_processo">"Processos de Soldagem "</string>
    <string name="eletroduto_buttom">Eletroduto Revestido</string>
    <string name="mig_buttom">MIG</string>
    <string name="mag_buttom">MAG</string>
    <string name="tig_buttom">TIG</string>
    <string name="title_activity_consumiveis">Consumíveis</string>
    <string name="title_activity_metal">Metal de Base</string>
    <string name="txt_arame">Arame</string>
    <string name="txt_espessura">Espessura do Arame</string>
    <string name="txt_gas">Gás</string>
    <string name="txt_metal_base">Tipo de metal de base</string>
    <string name="txt_espessura_metal">Espessura(mm)</string>
    <string name="txt_dimensoes">Dimensões</string>
    <string name="txt_largura">Largura</string>
    <string name="txt_comprimento">Comprimento</string>
    <string name="txt_processos_soldagem">Processos de Soldagem</string>
    <string name="txt_consumiveis">Consumíveis</string>
    <string name="txt_processos" />
    <string name="txt_metal">Metal de Base</string>
    <string name="txt_resultado">Resultado</string>
    <string name="txt_simbologia">Simbologia</string>
    <string name="title_activity_simbologia">Simbologia</string>
    <string name="txt_junta">Tipo de junta</string>
    <string name="txt_chanfro">Tipo de chanfro</string>
    <string name="txt_posicao">Posição de soldagem</string>
    <string name="title_activity_computacaode_dados">Computacão de dados aplicados</string>
    <string name="txt_espessura_computacao">Espessura</string>
    <string name="txt_tipo">Tipo</string>
    <string name="txt_posicao_computacao">Posição</string>
    <string name="title_activity_relatorio">Relatório</string>
    <string name="txt_parametros">Parâmetros Estabelecidos</string>
    <string name="txt_vazao">Vazão do gás</string>
    <string name="txt_temperatura">Temperatura da poça de fusão</string>
    <string name="txt_velocidade_soldagem">Velocidade da soldagem</string>
    <string name="txt_velocidade_arame">Velocidade do arame</string>
    <string name="txt_transferencia">Transferência</string>
    <string name="txt_corrente">Corrente</string>
    <string name="txt_tensao">Tensão</string>
    <string name="txt_dbc">D.B.C</string>
    <string name="txt_penetracao">Penetração</string>
    <string name="txt_resistencia_materiais">Resistência dos materiais</string>
    <string name="txt_tracao_longitudinal">Tração longitudinal</string>
    <string name="txt_tracao_transversal">Tração transversal</string>
    <string name="txt_dureza_HB">Dureza HB</string>
    <string name="txt_dureza_HRC">Dureza HRC</string>
    <string name="txt_parametros_estabelecidos">Parâmetros Estabelecidos</string>
    <string name="txt_micro_estrutura">Microestrutura</string>
    <string name="txt_grao_gg">Grão GG</string>
    <string name="txt_grao_gf">Grão GF</string>
    <string name="txt_regiao_intercritica">Região intercrítica</string>
    <string name="txt_regiao_subcritica">Região subcrítica</string>
    <string name="txt_regiao_nao_modificada">Região não modificada</string>
    <string name="txt_gerar">Gerar</string>

</resources>
