<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.matheus.s_weld.ActMain"
    tools:showIn="@layout/act_main">

    <ScrollView
        android:id="@+id/id_scroll_menu_principal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/id_layout_menu_principal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.v7.widget.CardView
                android:id="@+id/id_cardview_processos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                app:layout_constraintDimensionRatio=""
                app:layout_constraintEnd_toStartOf="@+id/id_cardview_consumiveis"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:id="@+id/id_layout_cardview_processos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/id_image_processos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        app:srcCompat="@mipmap/mig_mag" />

                    <TextView
                        android:id="@+id/id_txt_processos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/id_image_processos"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="20dp"
                        android:text="@string/txt_processos_soldagem"
                        android:textAlignment="center"
                        android:textStyle="bold" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/id_cardview_consumiveis"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/id_cardview_processos"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:id="@+id/id_layout_cardview_consumiveis"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/id_image_consumiveis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        app:srcCompat="@mipmap/consumiveis" />

                    <TextView
                        android:id="@+id/id_txt_consumiveis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/id_image_consumiveis"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="20dp"
                        android:text="@string/txt_consumiveis"
                        android:textAlignment="center"
                        android:textStyle="bold" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/id_cardview_metal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toStartOf="@+id/id_cardview_consumiveis"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_cardview_processos">

                <RelativeLayout
                    android:id="@+id/id_layout_cardview_metal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/id_image_metal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        app:srcCompat="@mipmap/metal" />

                    <TextView
                        android:id="@+id/id_txt_metal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/id_image_metal"
                        android:layout_marginBottom="15dp"
                        android:layout_marginTop="14dp"
                        android:text="@string/txt_metal"
                        android:textAlignment="center"
                        android:textStyle="bold" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/id_cardview_simbologia"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toEndOf="@+id/id_cardview_metal"
                app:layout_constraintTop_toBottomOf="@+id/id_cardview_consumiveis">

                <RelativeLayout
                    android:id="@+id/id_layout_cardview_simbologia"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/id_txt_simbologia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/id_image_simbologia"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="15dp"
                        android:layout_marginTop="13.5dp"
                        android:text="@string/txt_simbologia"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/id_image_simbologia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        app:srcCompat="@mipmap/simbologia" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/id_cardview_resultado"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/id_cardview_simbologia"
                app:layout_constraintHorizontal_bias="0.404"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id_cardview_metal">

                <RelativeLayout
                    android:id="@+id/id_layout_cardview_resultado"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/id_image_resultado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        app:srcCompat="@mipmap/lupa" />

                    <TextView
                        android:id="@+id/id_txt_resultado"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/id_image_resultado"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="11dp"
                        android:text="@string/txt_resultado"
                        android:textAlignment="center"
                        android:textStyle="bold" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>
